--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>李竣翔 介紹</title>
+  <title>李竣翔</title>
   <style>
     * {
       margin: 0;
